[gd_scene load_steps=24 format=3 uid="uid://0lu754qntb0m"]

[ext_resource type="Script" path="res://scripts/classes/moneyCollectable.gd" id="1_ylbw0"]
[ext_resource type="PackedScene" uid="uid://boks6msesku8v" path="res://assets/meshes/coin.glb" id="2_2omoo"]
[ext_resource type="PackedScene" uid="uid://dncdrtqog6vxl" path="res://assets/meshes/bill.glb" id="3_hfkx2"]
[ext_resource type="Shader" path="res://assets/materials/celshaded.gdshader" id="4_u57gv"]
[ext_resource type="Texture2D" uid="uid://ppsurb4ik7x5" path="res://assets/meshes/bill_moneytex.png" id="5_p7k82"]
[ext_resource type="Material" uid="uid://dncih1xkqoqnj" path="res://assets/materials/sparkle.tres" id="6_ip1ok"]
[ext_resource type="Material" uid="uid://cxjatb1k5nkf6" path="res://assets/materials/explosiveparticle.tres" id="7_yle3c"]
[ext_resource type="Texture2D" uid="uid://dqjlg445bwmmf" path="res://assets/images/sparklesphere.png" id="8_aeh2d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_o7q70"]
radius = 0.8

[sub_resource type="Gradient" id="Gradient_gadsb"]
colors = PackedColorArray(0.426699, 0.321894, 0.106715, 1, 0.427451, 0.321569, 0.105882, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ptgqn"]
gradient = SubResource("Gradient_gadsb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xv0nd"]
render_priority = 0
shader = ExtResource("4_u57gv")
shader_parameter/UseFade = false
shader_parameter/MinDistance = 0.2
shader_parameter/MaxDistance = 5.0
shader_parameter/dithersize = 6
shader_parameter/ToonRampOffset = 0.0
shader_parameter/ToonRampSmoothness = 0.0
shader_parameter/ToonRampTinting = null
shader_parameter/RimPower = 1.259
shader_parameter/RimCutOff = 0.0
shader_parameter/RimSmoothness = 0.013
shader_parameter/RimLightBrightness = 45.828
shader_parameter/SubSurfDistortion = 0.0
shader_parameter/SubSurfTint = null
shader_parameter/SubSurfBrightness = 0.0
shader_parameter/SubSurfCutoff = 0.0
shader_parameter/SubSurfSmoothness = 0.05
shader_parameter/Texture = SubResource("GradientTexture1D_ptgqn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k8xax"]
render_priority = 0
shader = ExtResource("4_u57gv")
shader_parameter/UseFade = false
shader_parameter/MinDistance = 0.2
shader_parameter/MaxDistance = 5.0
shader_parameter/dithersize = 6
shader_parameter/ToonRampOffset = 0.0
shader_parameter/ToonRampSmoothness = 0.0
shader_parameter/ToonRampTinting = null
shader_parameter/RimPower = 5.828
shader_parameter/RimCutOff = 0.0
shader_parameter/RimSmoothness = 0.013
shader_parameter/RimLightBrightness = 9.735
shader_parameter/SubSurfDistortion = 0.0
shader_parameter/SubSurfTint = null
shader_parameter/SubSurfBrightness = 0.0
shader_parameter/SubSurfCutoff = 0.0
shader_parameter/SubSurfSmoothness = 0.05
shader_parameter/Texture = ExtResource("5_p7k82")

[sub_resource type="Gradient" id="Gradient_tphlo"]
offsets = PackedFloat32Array(0, 0.123932, 0.363248, 0.854701)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t5uoq"]
gradient = SubResource("Gradient_tphlo")
width = 100

[sub_resource type="Curve" id="Curve_umecy"]
max_value = 3.0
_data = [Vector2(0, 0), 0.0, 8.7057, 0, 0, Vector2(0.248092, 1.85839), 0.0, 0.0, 0, 0, Vector2(0.366412, 1.33386), 0.0, 0.0, 0, 0, Vector2(0.538168, 1.82753), 0.0, 0.0, 0, 0, Vector2(0.671756, 1.27215), 0.0, 0.0, 0, 0, Vector2(0.854962, 1.5807), 0.0, 0.0, 0, 0, Vector2(1, 0), -27.9825, 0.0, 0, 0]
point_count = 7

[sub_resource type="CurveTexture" id="CurveTexture_ybjpx"]
curve = SubResource("Curve_umecy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_beus3"]
lifetime_randomness = 0.53
emission_shape_scale = Vector3(0.5, 0.5, 0.5)
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 0.1
radial_accel_max = 0.2
scale_min = 0.3
scale_max = 0.4
scale_curve = SubResource("CurveTexture_ybjpx")
scale_over_velocity_max = 0.2
color_ramp = SubResource("GradientTexture1D_t5uoq")

[sub_resource type="QuadMesh" id="QuadMesh_oaps2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8n6gb"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("8_aeh2d")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_biebe"]
max_value = 3.0
_data = [Vector2(0, 0), 0.0, 8.7057, 0, 0, Vector2(1, 3), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jv2vs"]
curve = SubResource("Curve_biebe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dworl"]
emission_shape_scale = Vector3(0.1, 0.1, 0.1)
spread = 0.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_jv2vs")
scale_over_velocity_max = 0.2
color_ramp = SubResource("GradientTexture1D_t5uoq")

[node name="MoneyCollectable" type="Node3D" node_paths=PackedStringArray("meshToUse") groups=["Collectable"]]
script = ExtResource("1_ylbw0")
meshToUse = NodePath("Visual/bill")

[node name="NearRange" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="NearRange"]
shape = SubResource("SphereShape3D_o7q70")

[node name="Visual" type="Node3D" parent="."]
transform = Transform3D(0.801691, 0, 0, 0, 0.8, 0, 0, 0, 0.801691, 0, 0, 0)

[node name="coin" parent="Visual" instance=ExtResource("2_2omoo")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -0.00130003, -0.477498, -0.00156331)
visible = false

[node name="coin" parent="Visual/coin" index="0"]
material_override = SubResource("ShaderMaterial_xv0nd")

[node name="bill" parent="Visual" instance=ExtResource("3_hfkx2")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.00244844, -0.477812, 0.0337853)

[node name="bill" parent="Visual/bill" index="0"]
material_override = SubResource("ShaderMaterial_k8xax")

[node name="IdleSparkle" type="GPUParticles3D" parent="."]
material_override = ExtResource("6_ip1ok")
amount = 2
lifetime = 2.12
randomness = 0.4
visibility_aabb = AABB(-0.30542, -0.303089, -0.301846, 0.61084, 0.606178, 0.603692)
process_material = SubResource("ParticleProcessMaterial_beus3")
draw_pass_1 = SubResource("QuadMesh_oaps2")

[node name="CollectSparkle" type="GPUParticles3D" parent="."]
transform = Transform3D(-0.00870913, -0.999962, 0, 0.999962, -0.00870913, 0, 0, 0, 1, 0, 0, 0)
material_override = ExtResource("6_ip1ok")
emitting = false
amount = 5
lifetime = 0.65
one_shot = true
explosiveness = 1.0
randomness = 0.4
visibility_aabb = AABB(-0.30542, -0.303089, -0.301846, 0.61084, 0.606178, 0.603692)
process_material = ExtResource("7_yle3c")
draw_pass_1 = SubResource("QuadMesh_oaps2")

[node name="Ring" type="GPUParticles3D" parent="CollectSparkle"]
transform = Transform3D(-0.00870913, -0.999962, 0, 0.999962, -0.00870913, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_8n6gb")
emitting = false
amount = 1
lifetime = 0.37
one_shot = true
explosiveness = 1.0
randomness = 0.4
visibility_aabb = AABB(-0.30542, -0.303089, -0.301846, 0.61084, 0.606178, 0.603692)
process_material = SubResource("ParticleProcessMaterial_dworl")
draw_pass_1 = SubResource("QuadMesh_oaps2")

[connection signal="body_entered" from="NearRange" to="." method="_on_near_range_body_entered"]
[connection signal="body_exited" from="NearRange" to="." method="_on_near_range_body_exited"]

[editable path="Visual/coin"]
[editable path="Visual/bill"]
